# translate-server

./: .gitignore  .projenrc.ts  README.md  buildspec.yaml  cdk.json  package-lock.json  package.json  pnpm-lock.yaml
stack/: cdk-pipeline-stack.ts  translate-server-default-stage.ts  translate-server-stack.ts
test/: translate-server.test.ts
translate/: Cargo.toml  Makefile
translate/http/: Translate.http
