[package]
name = "translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "translate"
path = "src/bin/translate.rs"

[[bin]]
name = "index"
path = "src/bin/index.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"



[dependencies]
tokio = { version = "1", features = [ "full" ] }
lambda_http = "0.5.1"
aws-sdk-translate = "0.9.0"
aws-config = "0.9.0"
serde = "1"
serde_json = "1"
lambda-web = { version = "0.1.9", features = ["actix4"] }
actix-web = "4"
actix-web-httpauth = "0.6.0"