[package]
name = "translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"



[dependencies]
tokio = { version = "1", features = [ "full" ] }
lambda_http = "0.5.1"
aws-sdk-translate = "0.10.1"
aws-config = "0.10.1"
aws-types = "0.10.1"
serde = "1"
serde_json = "1"
lambda-web = { version = "0.1.9", features = ["actix4"] }
actix-web = "4"
actix-web-httpauth = "0.6.0"
env_logger = "0.9"